--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sass": "^1.43.4",
     "scss": "^0.2.4",
     "typescript": "^4.4.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "worker-interval": "^1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
